--- a/src/css/loader.css
+++ b/src/css/loader.css
@@ -1,17 +1,21 @@
 :root {
-    --spinner-color: #ffffff;
+    --spinner-color: #000000;
     --spinner-size: 48px;
 }
 
 .overlay {
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(255, 255, 255, .1);
     height: 100vh;
-    z-index: 999;
+    z-index: 9999;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    border-radius: 10px;
 }
 
 .spinner {
