--- a/src/css/loader.css
+++ b/src/css/loader.css
@@ -3,6 +3,15 @@
     --spinner-size: 48px;
 }
 
+.offcanvas-backdrop.fade.show{
+    background: rgba(255, 255, 255, .1);
+    height: 100vh;
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(.498s);
+    opacity: 1;
+}
+
 .overlay {
     background: rgba(255, 255, 255, .1);
     height: 100vh;
@@ -13,7 +22,7 @@
     width: 100%;
     height: 100%;
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-    backdrop-filter: blur(4px);
+    backdrop-filter: blur(2px);
     -webkit-backdrop-filter: blur(4px);
     border-radius: 10px;
 }
