--- a/src/views/logon/logon.html
+++ b/src/views/logon/logon.html
@@ -37,7 +37,7 @@
 </div>
 <div class="container-fluid">
     <form id="setLogin" class="card position-absolute top-50 start-50 translate-middle">
-        <input type="hidden" name="route" value="login/set">
+        <input type="hidden" name="route" value="login/get">
         <div class="card-body">
             <div class="card-title lh-1 mb-3">
                 <span class="fs-5 fw-bold">Inicie sesi&oacute;n</span><br>
@@ -51,7 +51,7 @@
                         <div class="input-group-text">
                             <i class="fa-solid fa-user"></i>
                         </div>
-                        <input type="text" name="username" class="form-control">
+                        <input type="text" name="username" autocomplete="username" class="form-control">
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 mb-3">
@@ -59,9 +59,10 @@
                         <div class="input-group-text">
                             <i class="fa-solid fa-lock"></i>
                         </div>
-                        <input type="password" name="pw" class="form-control">
+                        <input type="password" name="pw" autocomplete="current-password" class="form-control">
                     </div>
                 </div>
+                <div class="alert alert-danger col-12 mb-3 d-none" id="alertError"></div>
                 <div class="col-12 col-md-5 col-lg-4">
                     <button class="btn btn-primary">
                         <i class="fa-solid fa-unlock me-2"></i>Ingresar
@@ -71,3 +72,6 @@
         </div>
     </form>
 </div>
+<button class="btn btn-primary position-absolute bottom-0 end-0 m-5" id="setDev">
+    <i class="fa-solid fa-cog"></i>
+</button>
