--- a/src/views/menus/ingresos/accounts.html
+++ b/src/views/menus/ingresos/accounts.html
@@ -1,5 +1,5 @@
-<div class="container-fluid p-4">
-    <div class="row is-glass py-2 mb-3">
+<div class="container-fluid p-1">
+    <div class="row py-2 mb-3 border bg-warning bg-opacity-25 rounded">
         <div class="col-12 mb-3 lh-1">
             <div class="fw-semibold">Gestionar cuentas</div>
             <small>
@@ -15,7 +15,7 @@
             </button>
         </div>
     </div>
-    <div class="row is-glass py-2 ">
+    <div class="row py-2 border bg-primary bg-opacity-25 rounded">
         <small>
             <i class="fa-solid fa-info-circle me-2"></i>
             Aquí podrás ver las cuentas actuales para modificar
