--- a/src/views/menus/ingresos/accounts.html
+++ b/src/views/menus/ingresos/accounts.html
@@ -1,24 +1,22 @@
-<div class="container-fluid p-1">
-    <div class="row py-2 mb-3 border bg-warning bg-opacity-25 rounded">
-        <div class="col-12 mb-3 lh-1">
-            <div class="fw-semibold">Gestionar cuentas</div>
-            <small>
-                Agregue o modifique cuentas donde ingresa el dinero para asociarlo dentro de sus costos
-            </small>
-        </div>
-        <div class="col col-12">
-            <button class="btn btn-sm btn-outline-dark" name="addAcount">
-                <i class="fa-solid fa-plus-circle"></i>Agregar una cuenta
-            </button>
-            <button class="btn btn-sm btn-outline-dark" name="seeAccounts">
-                <i class="fa-solid fa-pen-alt"></i>Modificar una cuenta
-            </button>
-        </div>
-    </div>
-    <div class="row py-2 border bg-primary bg-opacity-25 rounded">
+<div class="row py-2 mb-3 border bg-warning bg-opacity-25 rounded">
+    <div class="col-12 mb-3 lh-1">
+        <div class="fw-semibold">Gestionar cuentas</div>
         <small>
-            <i class="fa-solid fa-info-circle me-2"></i>
-            Aquí podrás ver las cuentas actuales para modificar
+            Agregue o modifique cuentas donde ingresa el dinero para asociarlo dentro de sus costos
         </small>
     </div>
+    <div class="col col-12">
+        <button class="btn btn-sm btn-outline-dark mb-3" name="addAcount">
+            <i class="fa-solid fa-plus-circle"></i>Agregar una cuenta
+        </button>
+        <button class="btn btn-sm btn-outline-dark mb-3" name="seeAccounts">
+            <i class="fa-solid fa-pen-alt"></i>Modificar una cuenta
+        </button>
+    </div>
+</div>
+<div class="row py-2 border bg-primary bg-opacity-25 rounded">
+    <small>
+        <i class="fa-solid fa-info-circle me-2"></i>
+        Aquí podrás ver las cuentas actuales para modificar
+    </small>
 </div>
