--- a/src/views/menus/sidebar.html
+++ b/src/views/menus/sidebar.html
@@ -69,4 +69,4 @@
         </div>
     </div>
 </div>
-<div id="mainContent" class="container-fluid p-4"></div>
+<div id="mainContent" class="p-4"></div>
